# mle-training-

./: Dockerfile  LICENSE  README.md  env.yml  main.py  nonstandardcode.py  pyproject.toml
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  search.html  searchindex.js
src/house_price_predictor/: module.py
src/house_price_predictor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/house_price_predictor_carolyn.egg-info/: PKG-INFO  SOURCES.txt
src/house_price_predictor_carolyn_2024.egg-info/: PKG-INFO  SOURCES.txt
src/mle_training/: .gitignore  Assignment3.1.ipynb  nonstandardcode.py
src/mle_training/src/mle_training/: Assignment3.1_exercise_3.ipynb
